--- a/styles/main.css
+++ b/styles/main.css
@@ -4,14 +4,35 @@ body {
   flex-direction: column;
   background-color: #FFFCFF;
 }
+
 button {
-  width: 75px;
+  width: 2.5em;
+  height: 2.5em;
   cursor: pointer;
   border: none;
+  border-color: #d36c6c;
   outline: none;
   padding: 5px;
+  margin-left: 10px;
   border-radius: 5px;
-  color: white;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button svg {
+  fill:#d36c6c;
+}
+
+#backButton, #nextButton {
+  width: 3em;
+  height: 3em;
+  background-color: transparent;
+}
+
+#backButton svg, #nextButton svg {
+  fill: #d36c6c;
 }
 
 #header {
@@ -23,9 +44,57 @@ button {
   display: flex;
   justify-content: space-evenly;
 }
-#header button {
-  background-color:#d36c6c;
+
+#yearDisplay {
+  margin-right: 15px;
 }
+
+#yearMenu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+#topNav {
+  display: flex;
+  justify-content: center;
+}
+
+#topNavMenu {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay { 
+  height: 0;
+  width: 100%;
+  position: fixed; 
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: rgb(0,0,0); 
+  background-color: rgba(255,255,255, 1.0); 
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+select {
+  width: 3em;
+  font-size: 26px;
+  background-color: #d36c6c;
+  border: none;
+  border-radius: 0.25rem;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+} 
+
 #yearContainer {
   width: 100%;
   display: flex;
@@ -38,17 +107,14 @@ button {
   color: #247BA0;
 }
 
-
-
 .day {
   width: calc(100% / 7);
-  height: 40px;
+  height: 50px !important;
   padding: 5px;
   block-size: auto;
   box-sizing: border-box;
   background-color: white;
   display: flex;
-  justify-content: space-between;
 }
 
 .day + #currentDay {
@@ -76,6 +142,7 @@ button {
   height: 20px;
   block-size: auto;
   border-bottom-style: solid;
+  margin-bottom: 10px;
   border-color: black;
   font-family: sans-serif;
   font-size: 12px;
@@ -86,7 +153,7 @@ button {
 .calContainer {
   display: flex;
   flex-direction: row;
-
+  margin-bottom: 10px;
 }
 
 .kwColumn {
@@ -120,16 +187,6 @@ button {
   justify-content: left;
 }
 
-.event {
-  font-size: 10px;
-  padding: 3px;
-  background-color: #58bae4;
-  color: white;
-  border-radius: 5px;
-  max-height: 55px;
-  overflow: hidden;
-}
-
 .padding {
   cursor: default !important;
   background-color: #FFFCFF !important;
@@ -137,57 +194,35 @@ button {
 }
 
 .holiday {
+  position: relative;
+  display: flex;
   background-color: #dfe6d9;
   border-radius: 5px;
 }
 
-#newEventModal, #deleteEventModal {
+.holidayDropdown {
   display: none;
-  z-index: 20;
-  padding: 25px;
-  background-color: #e8f4fa;
-  box-shadow: 0px 0px 3px black;
+  color: #000;
+  margin-top: 50px;
+  padding: 5px;
   border-radius: 5px;
-  width: 350px;
-  top: 100px;
-  left: calc(50% - 175px);
   position: absolute;
-  font-family: sans-serif;
-}
-#eventTitleInput {
-  padding: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 25px;
-  border-radius: 3px;
-  outline: none;
-  border: none;
-  box-shadow: 0px 0px 3px gray;
-}
-#eventTitleInput.error {
-  border: 2px solid red;
-}
-#cancelButton, #deleteButton {
-  background-color: #d36c6c;
-}
-#saveButton, #closeButton {
-  background-color: #92a1d1;
-}
-#eventText {
-  font-size: 14px;
-}
-#modalBackDrop {
-  display: none;
-  top: 0px;
-  left: 0px;
-  z-index: 10;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  background-color: rgba(0,0,0,0.8);
+  overflow: auto;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  float: right;
 }
 
+.holiday .dayNumber {
+  position: absolute;
+  left: 5px;
+}
 
+.show {
+  display:block;
+}
 
 @media screen and (min-width: 600px) {
   .month {
